force-app/main/default/objects/Product2/fields/Battery_Category__c.field-meta.xml
<CustomField>
    <fullName>Battery_Category__c</fullName>
    <label>Battery Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>INVERTER</fullName><default>true</default><label>Inverter</label></value>
            <value><fullName>VEHICLE</fullName><default>false</default><label>Vehicle</label></value>
            <value><fullName>SOLAR</fullName><default>false</default><label>Solar</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>