force-app/main/default/objects/Product2/fields/Capacity_Ah__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Ah__c</fullName>
    <label>Capacity (Ah)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>