force-app/main/default/objects/Product2/fields/Dealer_Price__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Price__c</fullName>
    <label>Dealer Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>