force-app/main/default/objects/Product2/fields/Portal_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Portal_Product_Id__c</fullName>
    <externalId>true</externalId>
    <label>Portal Product ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>