force-app/main/default/objects/Product2/fields/Voltage_V__c.field-meta.xml
<CustomField>
    <fullName>Voltage_V__c</fullName>
    <label>Voltage (V)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>